Update build settings to prevent build issue when embedding in framework (CocoaPods);
Allow Non-modular Includes in Framework Modules is now 'Yes' to fix the inclusion of ReactiveCocoa when used in CocoaPods, and assumingly embedded frameworks

--- a/ReactiveViewModel.xcodeproj/xcshareddata/xcschemes/ReactiveViewModel Mac.xcscheme
+++ b/ReactiveViewModel.xcodeproj/xcshareddata/xcschemes/ReactiveViewModel Mac.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-               BuildableName = "ReactiveViewModel.framework"
+               BuildableName = ".framework"
                BlueprintName = "ReactiveViewModel Mac"
                ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-            BuildableName = "ReactiveViewModel.framework"
+            BuildableName = ".framework"
             BlueprintName = "ReactiveViewModel Mac"
             ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
          </BuildableReference>
@@ -77,7 +77,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-            BuildableName = "ReactiveViewModel.framework"
+            BuildableName = ".framework"
             BlueprintName = "ReactiveViewModel Mac"
             ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
          </BuildableReference>
@@ -95,7 +95,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D0948A3A178159AD00BA8F23"
-            BuildableName = "ReactiveViewModel.framework"
+            BuildableName = ".framework"
             BlueprintName = "ReactiveViewModel Mac"
             ReferencedContainer = "container:ReactiveViewModel.xcodeproj">
          </BuildableReference>
